--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 
 
 <a href="https://www.canva.com/">Canva</a>
+
+<a href="https://csvistool.com/">Data Structures and Algorithms Visualization Tool</a>
+
