--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<h1>Web services</h1>
+<h1>Web applications</h1>
 
-
-<a href="https://www.canva.com/">Canva</a>
-
-<a href="https://csvistool.com/">Data Structures and Algorithms Visualization Tool</a>
+<ol>
+  <li><a href="https://www.canva.com/">Canva</a></li>
+  <li><a href="https://csvistool.com/">Data Structures and Algorithms Visualization Tool</a></li>
+</ol>
 
