--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <h1>Web applications</h1>
 
-<<<<<<< HEAD
+
 <ol>
   <li><a href="https://www.canva.com/">Canva</a></li>
   <li><a href="https://csvistool.com/">Data Structures and Algorithms Visualization Tool</a></li>
 </ol>
 
-=======
 <a href="https://www.canva.com/">Canva</a>
->>>>>>> a2efa6c (Update index.html)
+
+<h2>Books</h2>
+<ol>
+  <li><a href="pdfiles.net">pdfiles</a></li>
+  <li><a href="goalkicker.com">goalkicker</a></li>
+</ol>
