Update links to open on new tab

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 
 <ol>
-  <li><a href="https://www.canva.com/">Canva</a></li>
-  <li><a href="https://csvistool.com/">Data Structures and Algorithms Visualization Tool</a></li>
+  <li><a href="https://www.canva.com/" target="_blank">Canva</a></li>
+  <li><a href="https://csvistool.com/" target="_blank">Data Structures and Algorithms Visualization Tool</a></li>
 </ol>
 
 <a href="https://www.canva.com/">Canva</a>
 
 <h2>Books</h2>
 <ol>
-  <li><a href="pdfiles.net">pdfiles</a></li>
-  <li><a href="goalkicker.com">goalkicker</a></li>
+  <li><a href="https://pdfiles.net" target="_blank">pdfiles</a></li>
+  <li><a href="https://goalkicker.com" target="_blank">goalkicker</a></li>
 </ol>
